<project>
<modelVersion>4.0.0</modelVersion>
<parent>
    <groupId>ru.yandex</groupId>
    <artifactId>maven-test-project</artifactId>
    <version>1.0-SNAPSHOT</version>
</parent>
<artifactId>model</artifactId>
<packaging>jar</packaging>

<dependencies>
<!--<dependency>
    <groupId>ru.yandex</groupId>
    <artifactId>service</artifactId> &lt;!&ndash; ссылка на модуль api &ndash;&gt;
    <version>1.0-SNAPSHOT</version>
</dependency>-->
</dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>